--- a/CSS only Carousel/style.css
+++ b/CSS only Carousel/style.css
@@ -24,8 +24,8 @@ body {
 }
 
 .slide {
-    width: 10%;
-    height: 300px;
+    width: 20%;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +34,10 @@ body {
     font-weight: bold;
 }
 
+img{
+    height: 100vh;
+    width: 100%;
+}
 /* Radio Button Logic */
 input[type="radio"] {
     display: none;
